# cookiecutter-cpp-py-boost

./: README.md  cookiecutter.json  requirements.txt
{{cookiecutter.project_name}}/: CMakeLists.txt  Doxyfile.in  README.md  setup.py
{{cookiecutter.project_name}}/benchmarks/: CMakeLists.txt  benchmark_version.cpp
{{cookiecutter.project_name}}/config/: version.hpp.in  version_test.cpp.in
{{cookiecutter.project_name}}/src/py/: CMakeLists.txt  {{cookiecutter.project_name}}_py.cpp
{{cookiecutter.project_name}}/tests/: CMakeLists.txt  failing_test.cpp
