add_executable(version_test ${PROJECT_BINARY_DIR}/version_test.cpp)
target_link_libraries(version_test Boost::unit_test_framework)
target_compile_definitions(version_test PRIVATE BOOST_TEST_DYN_LINK)
target_include_directories(version_test PRIVATE ${PROJECT_BINARY_DIR}/include)
set_property(TARGET version_test PROPERTY CXX_STANDARD 14)
add_test(test_version_test ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/version_test)

set(TESTS failing_test)
foreach(test ${TESTS})
    add_executable(${test} ${test}.cpp)
    target_link_libraries(${test} Boost::unit_test_framework)
    target_compile_definitions(${test} PRIVATE BOOST_TEST_DYN_LINK)
    target_include_directories(${test} PRIVATE ${PROJECT_BINARY_DIR}/include)
    add_test(test_${test} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${test})
endforeach(test)

